# wakewords

./: .gitignore  AGENTS.md  DATASET.md  LICENSE  README.md  USAGE.md  main.py  package-lock.json  package.json  parquet-checklist.md  parquet.md  pyproject.toml  wakewords.txt  words.json
datatools/: __init__.py  augment.py  cli.py  dataset_manifest.py  download.py  manifest.py
demo/: index.html  package-lock.json  package.json  vite.config.js
docs/: USAGE.md  custom-providers.md  javascript-api.md  python.md
issues/: 2026-04-26-augment-command-layout.md  2026-04-26-clean-dataset-command.md  2026-04-26-data-output-root.md  2026-04-26-dataset-download-command.md  2026-04-26-deterministic-google-splits.md  2026-04-26-deterministic-subset-shuffle.md  2026-04-26-download-base-model.md  2026-04-26-generate-config-words.md  2026-04-26-google-manifest-filter.md  2026-04-26-local-base-model-override.md  2026-04-26-provider-voice-registry.md  2026-04-26-readme-quickstart-focus.md  2026-04-26-remove-common-voice.md  2026-04-26-rename-env-noise.md  2026-04-26-root-google-speech.md  2026-04-26-root-split-manifests.md  2026-04-26-split-manifest-command.md  2026-04-26-targeted-augment-combos.md  2026-04-26-word-manifest-metadata.md  2026-04-28-ffmpeg-mix-equivalence.md
javascript/: package.json
js/: README.md  package-lock.json  package.json
python/: .gitignore  README.md  pyproject.toml
python/tests/: test_audio.py  test_augment.py  test_augment_mix_equivalence.py  test_check.py  test_clean.py  test_cli.py  test_dataset_manifest.py  test_detect.py  test_download.py  test_export.py  test_generate.py  test_init.py  test_parquet_store.py  test_playground_mfcc.mjs  test_server.py  test_train.py
python/tests/fixtures/: mfcc_preprocessor.json
python/wakewords/: augment.py  check.py  clean.py  cli.py  dataset_manifest.py  detect.py  download.py  evaluate.py  export.py  generate.py  parquet_store.py  project.py  server.py
python/wakewords/assets/: __init__.py
python/wakewords/playground/: __init__.py  audio.js  record.html  record.js  styles.css  test.html  test.js
python/wakewords/providers/: __init__.py  base.py
swift/: Package.resolved  Package.swift  README.md
tests/: test_audio.py  test_augment.py  test_check.py  test_clean.py  test_dataset_manifest.py  test_download.py  test_export.py  test_generate.py  test_init.py  test_parquet_store.py  test_playground_mfcc.mjs  test_playground_mfcc.py  test_providers.py  test_server.py  test_train.py
wakeword/: __init__.py  augment.py  cli.py  dataset_manifest.py  download.py  project.py  registry.py
wakewords/: audio.py  augment.py  clean.py  cli.py  dataset_manifest.py  download.py  export.py  (+5 more)
(+40 files in other folders)
