[project]
name = "tincan-wakewords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartesia>=3.0.2",
    "fire>=0.7.1",
]

[project.scripts]
datatools = "datatools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datatools"]
