[project]
name = "wakewords"
version = "0.3.18"
description = "Tools for building wake-word and speech-command datasets and models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartesia>=3.0.2",
    "fastapi[standard]>=0.115",
    "fire>=0.7.1",
    "nemo-toolkit[asr]>=2.3.0; sys_platform != 'darwin'",
    "onnxruntime>=1.23.2",
    "pyarrow>=21.0.0",
    "requests>=2.33.1",
    "silero-vad>=6.2.1",
    "tensorboard>=2.20.0",
    "torch==2.9.1; sys_platform != 'darwin'",
    "torchaudio==2.9.1; sys_platform != 'darwin'",
    "tqdm>=4.67.3",
]

[project.scripts]
wakewords = "wakewords.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wakewords"]
artifacts = ["wakewords/google_scd_background_noise/*", "wakewords/assets/*"]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260408",
]
